--- a/include_graph_cache.html
+++ b/include_graph_cache.html
@@ -1,9 +1,9 @@
-<script src="/include/grafici/charts/amcharts/amcharts.js"></script>
-<script src="/include/grafici/charts/amcharts/serial.js"></script>
-<script src="/include/grafici/charts/amcharts/plugins/dataloader/dataloader.min.js"></script>
+<script type="text/javascript" src="/include/grafici/charts/amcharts/amcharts.js"></script>
+<script type="text/javascript" src="/include/grafici/charts/amcharts/serial.js"></script>
+<script type="text/javascript" src="/include/grafici/charts/amcharts/plugins/dataloader/dataloader.min.js"></script>
 
 <div id="chartdiv" style="width: 100%; height: 500px;"></div>
-<script>
+<script type="text/javascript">
     var chart = AmCharts.makeChart( "chartdiv", {
         "type": "serial",
         "dataLoader": {
